--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,6 +1,6 @@
 # Training configuration
 batch_size: 32
-learning_rate: 2.2e-4
-num_epochs: 5
+learning_rate: 0.000025
+num_epochs: 10
 gradient_clip: 1.0
 warmup_steps: 2000
