--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,6 +1,6 @@
 # Training configuration
 batch_size: 24
-learning_rate: 0.00075
+learning_rate: 0.0000375
 num_epochs: 100
 gradient_clip: 1.0
 warmup_steps: 500
