--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,15 +1,14 @@
 # Model configuration
-num_layers: 2
-hidden_dim: 256
+num_layers: 4
+hidden_dim: 128  
 num_heads: 8
 head_dim: 128
 rope_dim: 128
-kv_compression_dim: 64
+kv_compression_dim: 64 
 query_compression_dim: 64 
-num_experts: 2
+num_experts: 4 
 activated_experts: 2
-vocab_size : 50258 # Wont be necessary here. Since we may use different tokenizers in during data preparation
+vocab_size: 50258
 min_seq_len: 5
-max_seq_len: 64 
-stride: 8
-
+max_seq_len: 64
+stride: 32  
